--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,24 @@ body {
 }
 
 ul {
-  margin: 0px;
   padding: 0px;
   list-style: none;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+h1,
+ul,
+p {
+  margin: 0px;
 }
 
 .header {
@@ -56,6 +67,61 @@ a {
 
 .header-menu a:hover:after {
   width: 100%;
+}
+
+.introduction-bg {
+  background-color: #000;
+  color: #fff;
+}
+
+.introduction {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 0px 40px;
+  box-sizing: border-box;
+  max-width: 1200px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.introduction-content {
+  align-self: end;
+  padding-bottom: 80px;
+}
+
+.introduction-content h1 {
+  margin-bottom: 32px;
+  font-size: 64px;
+  line-height: 1.125;
+}
+
+.introduction-content h1 span {
+  color: #ffbb00;
+}
+
+.introduction a {
+  padding: 16px 32px;
+  background: linear-gradient(#ffbf00, #f2a50c);
+  border-radius: 4px;
+  color: #332200;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  text-transform: uppercase;
+  font-size: 18px;
+  line-height: 1.33;
+  font-weight: bold;
+}
+
+.introduction a:hover {
+  background: linear-gradient(#ffb60d, #e59317);
+}
+
+.introduction-content p {
+  margin-bottom: 20px;
+  font-size: 24px;
+  line-height: 1.5;
+  color: #b2b2b2;
 }
 
 @media (max-width: 800px) {
