--- a/css/style.css
+++ b/css/style.css
@@ -1,128 +1,9 @@
-body {
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-ul {
-  padding: 0px;
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-img {
-  max-width: 100%;
-  display: block;
-}
-
-h1,
-ul,
-p {
-  margin: 0px;
-}
-
-.header {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 20px;
-  max-width: 1160px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.header-bg {
-  background-color: #000;
-}
-
-.header-menu {
-  display: flex;
-  gap: 40px;
-}
-
-.header-menu a {
-  display: inline-block;
-  color: #fff;
-  padding: 16px 0;
-  font-size: 18px;
-  position: relative;
-}
-
-.header-menu a:after {
-  content: " ";
-  display: block;
-  height: 2px;
-  width: 0;
-  background-color: #fff;
-  margin-top: 4px;
-  transition: 0.3s;
-  position: absolute;
-}
-
-.header-menu a:hover:after {
-  width: 100%;
-}
-
-.introduction-bg {
-  background-color: #000;
-  color: #fff;
-}
-
-.introduction {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.introduction-content {
-  align-self: end;
-  padding-bottom: 80px;
-}
-
-.introduction-content h1 {
-  margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-}
-
-.introduction-content h1 span {
-  color: #ffbb00;
-}
-
-.introduction a {
-  padding: 16px 32px;
-  background: linear-gradient(#ffbf00, #f2a50c);
-  border-radius: 4px;
-  color: #332200;
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
-  text-transform: uppercase;
-  font-size: 18px;
-  line-height: 1.33;
-  font-weight: bold;
-}
-
-.introduction a:hover {
-  background: linear-gradient(#ffb60d, #e59317);
-}
-
-.introduction-content p {
-  margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
-}
+@import "./global/global.css";
+@import "./global/header.css";
+@import "./home/introduction.css";
+@import "./utilities/components.css";
+@import "./utilities/typography.css";
+@import "./utilities/colors.css";
 
 @media (max-width: 800px) {
   .header-menu {
@@ -130,17 +11,42 @@ p {
   }
 
   .header-menu a {
-    background-color: #111;
+    background-color: var(--color-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
 
   .header-menu a:hover {
-    background-color: #2e2e2e;
+    background-color: var(--color-10);
   }
 
   .header-menu a:after {
     display: none;
+  }
+
+  .introduction {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+
+  .introduction-bg {
+    background-color: var(--color-11);
+    padding-top: 40px;
+    box-shadow: inset 0 -60px var(--color-0);
+  }
+
+  .introduction-content {
+    padding-bottom: 0px;
+  }
+
+  .introduction-content h1 {
+    font-size: 32px;
+    margin-bottom: 16px;
+  }
+
+  .introduction img {
+    height: 300px;
+    width: 100%;
   }
 }
 
@@ -152,5 +58,10 @@ p {
   .header-menu a {
     padding: 8px 12px;
     font-size: 14px;
+  }
+
+  .button {
+    padding: 12px 16px;
+    font-size: 16px;
   }
 }
