--- a/css/global/global.css
+++ b/css/global/global.css
@@ -20,7 +20,16 @@ img {
   display: block;
 }
 
+img[src$=".jpg"] {
+  border-radius: 4px;
+}
+
 h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 ul,
 p {
   margin: 0px;
