--- a/css/utilities/components.css
+++ b/css/utilities/components.css
@@ -20,10 +20,20 @@
   font-weight: bold;
   font-family: "Poppins";
   font-weight: 600;
+  max-width: max-content;
 }
 
 .button:hover {
   background: linear-gradient(#ffb60d, #e59317);
+}
+
+.button.second {
+  background: var(--color-10);
+  color: var(--color-2);
+}
+
+.button.second:hover {
+  background: var(--color-9);
 }
 
 .link {
@@ -43,4 +53,28 @@
 
 .link:hover {
   color: var(--color-0);
+}
+
+/* titles internal */
+.title-bg {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--color-11);
+}
+
+.title p {
+  margin-bottom: 4px;
+}
+
+@media (max-width: 800px) {
+  .title-bg {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .title p {
+    font-size: 1rem;
+    text-transform: lowercase;
+    font-weight: 400;
+  }
 }
