--- a/css/global/footer.css
+++ b/css/global/footer.css
@@ -14,16 +14,16 @@
   margin-bottom: 32px;
 }
 
-.footer-contact {
+.footer-contato ul {
   margin-bottom: 32px;
 }
 
-.footer-contact li:nth-child(even)::after {
+.footer-contato li:nth-child(even):after {
   content: "";
   display: block;
   max-width: 360px;
   height: 2px;
-  background-color: var(--color-11);
+  background: var(--color-11);
   margin-top: 16px;
 }
 
@@ -59,7 +59,6 @@
     grid-template-columns: 1fr;
     gap: 60px;
   }
-
   .footer-copy {
     margin-top: 0px;
   }
