--- a/css/global/global.css
+++ b/css/global/global.css
@@ -1,7 +1,18 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  color: var(--color-11);
+  color: #111111;
+}
+
+h1,
+h2,
+h3,
+h4,
+ul,
+p,
+blockquote,
+dd {
+  margin: 0px;
 }
 
 ul {
@@ -21,16 +32,4 @@ img {
 
 img[src$=".jpg"] {
   border-radius: 4px;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-ul,
-p,
-blockquote {
-  margin: 0px;
 }
