--- a/css/home/introduction.css
+++ b/css/home/introduction.css
@@ -29,12 +29,24 @@
   margin-bottom: 20px;
 }
 
-@media (max-width: 1200px) {
-  .introduction-content h1 {
-    font-size: 48px;
+@media (max-width: 800px) {
+  .introduction-bg {
+    background: var(--color-11);
+    padding-top: 40px;
+    box-shadow: inset 0 -60px #ffffff;
   }
-
-  .introduction-content p {
-    font-size: 18px;
+  .introduction {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .introduction-content {
+    padding-bottom: 0px;
+  }
+  .introduction h1 {
+    margin-bottom: 16px;
+  }
+  .introduction img {
+    height: 300px;
+    width: 100%;
   }
 }
