--- a/css/seguros/seguros.css
+++ b/css/seguros/seguros.css
@@ -11,6 +11,10 @@
   align-items: center;
 }
 
+#seguros .seguros {
+  padding-top: 0px;
+}
+
 .seguros h2 {
   grid-column: 1/-1;
 }
@@ -20,6 +24,7 @@
   padding: 32px 32px 32px 60px;
   display: grid;
   grid-template-columns: 1fr auto;
+  border-radius: 4px;
 }
 
 .seguros-item h3 {
@@ -48,7 +53,7 @@
 }
 
 .seguros-item li::before {
-  content: " ";
+  content: "";
   display: inline-block;
   width: 13px;
   height: 9px;
@@ -59,7 +64,6 @@
 
 .seguros-item a {
   grid-column: 1/-1;
-  margin-bottom: 32px;
 }
 
 @media (max-width: 800px) {
