--- a/css/style.css
+++ b/css/style.css
@@ -18,69 +18,14 @@
 @import "./bikes/bikes-list.css";
 @import "./bikes/bikes.css";
 
+/*bicicleta*/
+@import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
+
 /*seguros*/
 @import "./seguros/seguros.css";
+@import "./seguros/vantagens.css";
+@import "./seguros/perguntas.css";
 
 /*termos*/
 @import "./termos/termos.css";
-
-@media (max-width: 800px) {
-  .header-menu {
-    gap: 20px;
-  }
-
-  .header-menu a {
-    background-color: var(--color-11);
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-
-  .header-menu a:hover {
-    background-color: var(--color-10);
-  }
-
-  .header-menu a:after {
-    display: none;
-  }
-
-  .introduction {
-    grid-template-columns: 1fr;
-    gap: 32px;
-  }
-
-  .introduction-bg {
-    background-color: var(--color-11);
-    padding-top: 40px;
-    box-shadow: inset 0 -60px var(--color-0);
-  }
-
-  .introduction-content {
-    padding-bottom: 0px;
-  }
-
-  .introduction-content h1 {
-    font-size: 32px;
-    margin-bottom: 16px;
-  }
-
-  .introduction img {
-    height: 300px;
-    width: 100%;
-  }
-}
-
-@media (max-width: 600px) {
-  .header-menu {
-    gap: 12px;
-  }
-
-  .header-menu a {
-    padding: 8px 12px;
-    font-size: 14px;
-  }
-
-  .button {
-    padding: 12px 16px;
-    font-size: 16px;
-  }
-}
