--- a/css/utilities/components.css
+++ b/css/utilities/components.css
@@ -1,6 +1,6 @@
 .container {
   box-sizing: border-box;
-  width: 1200px;
+  max-width: 1200px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
@@ -12,14 +12,10 @@
   padding: 16px 32px;
   background: linear-gradient(#ffbf00, #f2a50c);
   border-radius: 4px;
-  color: var(--color-p5);
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   text-transform: uppercase;
-  font-size: 18px;
-  line-height: 1.33;
-  font-weight: bold;
-  font-family: "Poppins";
-  font-weight: 600;
+  color: var(--cor-p5);
+  font: 600 1.125rem/1.35 "Poppins", sans-serif;
   max-width: max-content;
 }
 
@@ -42,7 +38,7 @@
 }
 
 .button.seta::after {
-  content: " ";
+  content: "";
   display: inline-block;
   width: 18px;
   height: 10px;
@@ -53,6 +49,13 @@
 
 .button.seta:hover::after {
   transform: translateX(4px);
+}
+
+@media (max-width: 600px) {
+  .button {
+    padding: 12px 16px;
+    font-size: 1rem;
+  }
 }
 
 .link {
