--- a/css/orcamento/orcamento.css
+++ b/css/orcamento/orcamento.css
@@ -33,7 +33,8 @@
 
 .orcamento-produto {
   border-radius: 5px 0 0 5px;
-  background: var(--color-12);
+  background: var(--color-12) url(../../img/dec/bottom-left.svg) no-repeat
+    bottom 20px left 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
@@ -48,6 +49,16 @@
   grid-column: initial;
 }
 
+.orcamento-produto label:hover {
+  background-color: var(--color-9);
+  border-color: var(--color-9);
+}
+
+.orcamento-produto input:focus + label {
+  border-color: var(--color-12);
+  box-shadow: 0 0 0 2px var(--color-p1);
+}
+
 .orcamento-produto label {
   font: 400 1rem/1.5 "Poppins", sans-serif;
   color: var(--color-4);
@@ -56,6 +67,10 @@
   padding: 12px 16px;
   border-radius: 4px;
   cursor: pointer;
+  display: grid;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  border: 1px solid var(--color-10);
 }
 
 .orcamento-produto label::before {
@@ -74,6 +89,14 @@
   box-shadow: inset 0 0 0 3px var(--color-0), inset 0 0 0 6px var(--color-7);
 }
 
+.orcamento-produto label span {
+  display: none;
+}
+
+.orcamento-produto input:checked + label span {
+  display: inline-block;
+}
+
 .orcamento-produto input {
   opacity: 0;
   position: absolute;
@@ -87,10 +110,73 @@
 
 .orcamento-dados {
   border-radius: 0 5px 5px 0;
-  background: var(--color-0);
+  background: var(--color-0) url(../../img/dec/bottom-right.svg) no-repeat
+    bottom 20px right 20px;
+}
+
+.orcamento-conteudo {
+  display: none;
+}
+
+.orcamento-conteudo h2,
+.orcamento-dados h2:nth-of-type(n + 2) {
+  margin-top: 20px;
 }
 
 #bikcraft:checked ~ #orcamento-bikcraft,
 #seguro:checked ~ #orcamento-seguro {
-  display: block;
+  display: grid;
+  gap: 20px;
+}
+
+.orcamento-detalhes {
+  background-color: var(--color-0);
+  padding: 20px;
+  display: none;
+  grid-template-columns: 1fr 1fr;
+  border-radius: 4px;
+  align-items: center;
+}
+
+.orcamento-detalhes li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.orcamento-detalhes li img {
+  width: 16px;
+  margin-right: 8px;
+}
+
+.orcamento-produto input:checked + label + .orcamento-detalhes {
+  display: grid;
+}
+
+@media (max-width: 1200px) {
+  .orcamento-produto,
+  .orcamento-dados {
+    padding: 32px;
+  }
+}
+
+@media (max-width: 800px) {
+  .orcamento {
+    grid-template-columns: 1fr;
+  }
+
+  .orcamento-produto {
+    border-radius: 5px 5px 0 0;
+    background: var(--color-12);
+  }
+
+  .orcamento-dados {
+    border-radius: 0 0 5px 5px;
+  }
+}
+
+@media (max-width: 400px) {
+  .orcamento-produto {
+    grid-template-columns: 1fr;
+  }
 }
